julia/codegen/BVG_h.jl


function bvgraph_iterator_copy(i::Ptr{bvgraph_iterator},j::Ptr{bvgraph_iterator})
    ccall((:bvgraph_iterator_copy,libbvg),Cint,(Ptr{bvgraph_iterator},Ptr{bvgraph_iterator}),i,j)
end

function bvgraph_parallel_iterators_create(g::Ptr{bvgraph},pits::Ptr{bvgraph_parallel_iterators},niters::Cint,wnode::Cint,wedge::Cint)
    ccall((:bvgraph_parallel_iterators_create,libbvg),Cint,(Ptr{bvgraph},Ptr{bvgraph_parallel_iterators},Cint,Cint,Cint),g,pits,niters,wnode,wedge)
end

function bvgraph_parallel_iterator(pits::Ptr{bvgraph_parallel_iterators},i::Cint,iter::Ptr{bvgraph_iterator},nsteps::Ptr{Cint})
    ccall((:bvgraph_parallel_iterator,libbvg),Cint,(Ptr{bvgraph_parallel_iterators},Cint,Ptr{bvgraph_iterator},Ptr{Cint}),pits,i,iter,nsteps)
end

function bvgraph_parallel_iterators_free(pits::Ptr{bvgraph_parallel_iterators})
    ccall((:bvgraph_parallel_iterators_free,libbvg),Cint,(Ptr{bvgraph_parallel_iterators},),pits)
end

function bvgraph_required_memory(g::Ptr{bvgraph},offset_step::Cint,gbuf::Ptr{Csize_t},offsetbuf::Ptr{Csize_t})
    ccall((:bvgraph_required_memory,libbvg),Cint,(Ptr{bvgraph},Cint,Ptr{Csize_t},Ptr{Csize_t}),g,offset_step,gbuf,offsetbuf)
end

function merge_int_arrays(a1::Ptr{Cint},a1len::Csize_t,a2::Ptr{Cint},a2len::Csize_t,out::Ptr{Cint},outlen::Csize_t)
    ccall((:merge_int_arrays,libbvg),Cint,(Ptr{Cint},Csize_t,Ptr{Cint},Csize_t,Ptr{Cint},Csize_t),a1,a1len,a2,a2len,out,outlen)
end

function bvgraph_error_string(error::Cint)
    val = ccall((:bvgraph_error_string,libbvg),Ptr{Uint8},(Cint,),error)
    bytestring(val)
end

function error_string(var::Int32)
    val = ccall((:bvgraph_error_string, sopath),
                 Ptr{UInt8}, (Int32,), var)
    if val == C_NULL
       error("bvgraph_error_string: undefined string)
    end
    bytestring(val)
end

